[project]
name = "hat-gateway"
version = "0.6.26"
description = "Hat gateway"
readme = "README.rst"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
dependencies = [
    "appdirs ~=1.4.4",
    "hat-aio ~=0.7.12",
    "hat-drivers ~=0.9.15",
    "hat-event ~=0.9.36",
    "hat-json ~=0.6.3",
    "hat-monitor ~=0.8.19",
    "hat-sbs ~=0.7.5",
    "hat-util ~=0.6.20",
]

[project.scripts]
hat-gateway = "hat.gateway.main:main"

[project.urls]
Homepage = "http://hat-open.com"
Repository = "https://github.com/hat-open/hat-gateway.git"
Documentation = "http://hat-gateway.hat-open.com"

[project.optional-dependencies]
dev = [
    "hat-doit ~=0.16.2",
    "psutil >=5.9.8",
    "sphinxcontrib-plantuml >=0.27",
    "sphinxcontrib-programoutput >=0.17",
]

[build-system]
requires = ["hat-doit ~=0.16.2"]
build-backend = "hat.doit.pep517"

[tool.pytest.ini_options]
testpaths = ["test_pytest"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
timeout = 300

[tool.coverage.report]
show_missing = true

[tool.coverage.run]
include = ["src_py/*"]
data_file = "build/.coverage"
