[project]
name = "hat-gateway"
version = "0.6.43"
description = "Hat gateway"
readme = "README.rst"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
dependencies = [
    "appdirs ~=1.4.4",
    "hat-aio ~=0.7.13",
    "hat-drivers ~=0.10.1",
    "hat-event ~=0.9.41",
    "hat-json ~=0.6.8",
    "hat-monitor ~=0.8.21",
    "hat-sbs ~=0.7.6",
    "hat-util ~=0.6.22",
]

[project.scripts]
hat-gateway = "hat.gateway.main:main"

[project.urls]
Homepage = "http://hat-open.com"
Repository = "https://github.com/hat-open/hat-gateway.git"
Documentation = "http://hat-gateway.hat-open.com"

[dependency-groups]
run = [
    "appdirs ~=1.4.4",
    "hat-aio ~=0.7.13",
    "hat-drivers ~=0.10.1",
    "hat-event ~=0.9.41",
    "hat-json ~=0.6.8",
    "hat-monitor ~=0.8.21",
    "hat-sbs ~=0.7.6",
    "hat-util ~=0.6.22",
]
build = [
    "hat-doit ~=0.16.4",
    "hat-json ~=0.6.8",
    "hat-sbs ~=0.7.6",
]
dev = [
    {include-group = "run"},
    {include-group = "build"},
    "psutil >=7.2.2",
    "sphinxcontrib-plantuml >=0.27",
    "sphinxcontrib-programoutput >=0.17",
]

[build-system]
requires = ["hat-doit ~=0.16.4"]
build-backend = "hat.doit.pep517"

[tool.pytest.ini_options]
testpaths = ["test_pytest"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
timeout = 300

[tool.coverage.report]
show_missing = true

[tool.coverage.run]
include = ["src_py/*"]
data_file = "build/.coverage"
